# 2gc-client

./:   ssh -T git@github.com    ssh -T git@github.com.pub  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
docs/: PROJECT_OVERVIEW_RU.md  RELAY_PROTOCOL.md
src/: app.html  i18n.js  store.ts  types.ts
src-tauri/: 2  Cargo.toml  old_toml.txt  storage.ini  tauri.conf.json
src-tauri/--alpha/: package.json  pnpm-lock.yaml
src-tauri/--alpha/src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: old_tray_icon.rgb  old_tray_icon.rgba
src-tauri/programs/: updater.ini
src-tauri/src/: becup  config.rs  main.rs  old_main.rs  process.rs  rdp_settings.rs  remoute.rs  ssh_settings.rs  storage.rs
src-tauri/storage/: storage.ini
src-tauri/wix/: installDir.wixobj  installDir.wxs  main.wixobj  main.wxs  testmain.wxs
src/lib/: AdvancedNewsTicker.svelte  Auth.svelte  ChatwootWidget.svelte  ConfigServer.svelte  Heder.svelte  LoginServer.svelte  Menu.svelte  Message.svelte  NewsTicker.svelte  NewsTickerExample.svelte  PushModal.svelte  Server.svelte  _Server.svelte  buckup.svelte  constants.ts  sse.ts
src/locales/: en.json  ru.json
src/pages/dashboard/tabs/: TabActivity.svelte  TabSecurity.svelte  TabSettings.svelte  TabSupport.svelte
src/routes/: +layout.js  +page.svelte
src/store/: settings.ts
static/: custom.css
static/cssbootstrap/: bootstrap-grid.css  bootstrap-grid.css.map  bootstrap-grid.min.css.map  bootstrap-grid.rtl.css  bootstrap-grid.rtl.css.map  bootstrap-grid.rtl.min.css.map  bootstrap.css  bootstrap.css.map  bootstrap.min.css.map  bootstrap.rtl.css  bootstrap.rtl.css.map  bootstrap.rtl.min.css.map
